2005-04-06  Stefan Jahn  <stefan@lkcc.org>

	* microstrip.tex (section{Microstrip via hole}): Fixed typo
	in microstrip via hole documentation.

	* dcanalysis.tex (subsection{QR decomposition}): Documented
	QR decomposition.

2005-03-12  Stefan Jahn  <stefan@lkcc.org>

	* devices.tex (subsection{Small signal model}): Documented
	SPICE small signal equivalent BJT circuit.

	* microstrip.tex (subsection{Strip thickness correction}): 
	Documented strip thickness corrections for coupled
	microstrips.

2005-02-23  Stefan Jahn  <stefan@lkcc.org>

	* microstrip.tex (section{Microstrip tee junction}): Added
	note about displacement interpretations and mentioned
	negative transformer ratios.

	* hbanalysis.tex (subsection{Creating Transadmittance 
	Matrix}): Fixed spelling mistake and CVS conflict.

2005-02-19  Stefan Jahn  <stefan@lkcc.org>

	* grammar-data.tex (section{Qucs dataset grammar}): Added
	a small comment about dataset content.

2005-02-17  Raimund 'Raimi' Jacob  <raimi@lkcc.org>

	* grammar-data.tex: Added grammar for the dataset. Put all
	grammars into one appendix, share the introduction.

2005-02-16  Stefan Jahn  <stefan@lkcc.org>

	* technical.tex: Added Raimund Jacob as author.

	* hbanalysis.tex (subsection{Creating Transadmittance Matrix}): 
	Fixed some typos.

	* grammar-qucs.tex (chapter{Qucs netlist grammar}): Fixed
	comments on each grammer item as required.  Fixed some typos.

	* acnoise.tex (section{The Algorithm}): Added a note about the
	transposed LU decomposed matrix during AC noise analysis.

2005-02-13  Stefan Jahn  <stefan@lkcc.org>
 
	* acnoise.tex (subsection{Noise voltage source}): Documented
	AC noise matrices for noise voltage sources.
 
2005-02-13  Raimund 'Raimi' Jacob  <raimi@lkcc.org>

	* grammar-qucs.tex (chapter{Qucs netlist grammar}): Also finished
	the lexical structure. Re-ordering of the syntax.

2005-02-12  Raimund 'Raimi' Jacob  <raimi@lkcc.org>

	* grammar-qucs.tex (chapter{Qucs netlist grammar}): Begin of some