@@ -1,0 +1,271 @@
+%!PS-Adobe-2.0 EPSF-2.0
+%%BoundingBox: 35 650 383 804
+% EPSF created by ps2eps 1.39
+%%Creator: Qt 3.1.2
+%%CreationDate: Tue Apr 12 21:37:01 2005
+%%Orientation: Portrait
+%%DocumentFonts: Courier
+
+%%EndComments
+%%BeginProlog
+save
+countdictstack
+mark
+newpath
+/showpage {} def
+/setpagedevice {pop} def%%EndProlog
+%%Page 1 1
+% Prolog copyright 1994-2003 Trolltech. You may copy this prolog in any way
+% that is directly related to this document. For other use of this prolog,
+% see your licensing agreement for Qt.
+/d/def load def/D{bind d}bind d/d2{dup dup}D/B{0 d2}D/W{255 d2}D/ED{exch d}D
+/D0{0 ED}D/LT{lineto}D/MT{moveto}D/S{stroke}D/F{setfont}D/SW{setlinewidth}D
+/CP{closepath}D/RL{rlineto}D/NP{newpath}D/CM{currentmatrix}D/SM{setmatrix}D
+/TR{translate}D/SD{setdash}D/SC{aload pop setrgbcolor}D/CR{currentfile read
+pop}D/i{index}D/bs{bitshift}D/scs{setcolorspace}D/DB{dict dup begin}D/DE{end
+d}D/ie{ifelse}D/sp{astore pop}D/BSt 0 d/LWi 1 d/PSt 1 d/Cx 0 d/Cy 0 d/WFi
+false d/OMo false d/BCol[1 1 1]d/PCol[0 0 0]d/BkCol[1 1 1]d/BDArr[0.94 0.88
+0.63 0.50 0.37 0.12 0.06]d/defM matrix d/nS 0 d/GPS{PSt 1 ge PSt 5 le and{{
+LArr PSt 1 sub 2 mul get}{LArr PSt 2 mul 1 sub get}ie}{[]}ie}D/QS{PSt 0 ne{
+LWi SW gsave PCol SC true GPS 0 SD S OMo PSt 1 ne and grestore{BkCol SC
+false GPS dup 0 get SD S}if}if}D/r28{{CR dup 32 gt{exit}if pop}loop 3{CR}
+repeat 0 4{7 bs exch dup 128 gt{84 sub}if 42 sub 127 and add}repeat}D/rA 0 d
+/rL 0 d/rB{rL 0 eq{/rA r28 d/rL 28 d}if dup rL gt{rA exch rL sub rL exch/rA
+0 d/rL 0 d rB exch bs add}{dup rA 16#fffffff 3 -1 roll bs not and exch dup
+rL exch sub/rL ED neg rA exch bs/rA ED}ie}D/uc{/rL 0 d 0{dup 2 i length ge{
+exit}if 1 rB 1 eq{3 rB dup 3 ge{1 add dup rB 1 i 5 ge{1 i 6 ge{1 i 7 ge{1 i
+8 ge{128 add}if 64 add}if 32 add}if 16 add}if 3 add exch pop}if 3 add exch
+10 rB 1 add{dup 3 i lt{dup}{2 i}ie 4 i 3 i 3 i sub 2 i getinterval 5 i 4 i 3
+-1 roll putinterval dup 4 -1 roll add 3 1 roll 4 -1 roll exch sub dup 0 eq{
+exit}if 3 1 roll}loop pop pop}{3 rB 1 add{2 copy 8 rB put 1 add}repeat}ie}
+loop pop}D/sl D0/QCIgray D0/QCIcolor D0/QCIindex D0/QCI{/colorimage where{
+pop false 3 colorimage}{exec/QCIcolor ED/QCIgray QCIcolor length 3 idiv
+string d 0 1 QCIcolor length 3 idiv 1 sub{/QCIindex ED/x QCIindex 3 mul d
+QCIgray QCIindex QCIcolor x get 0.30 mul QCIcolor x 1 add get 0.59 mul
+QCIcolor x 2 add get 0.11 mul add add cvi put}for QCIgray image}ie}D/di{
+gsave TR dup false ne{/languagelevel where{pop languagelevel 3 ge}{false}ie}
+{false}ie{/ma ED 8 eq{/dc[0 1]d/DeviceGray}{/dc[0 1 0 1 0 1]d/DeviceRGB}ie
+scs/im ED/mt ED/h ED/w ED/id 7 DB/ImageType 1 d/Width w d/Height h d
+/ImageMatrix mt d/DataSource im d/BitsPerComponent 8 d/Decode dc d DE/md 7
+DB/ImageType 1 d/Width w d/Height h d/ImageMatrix mt d/DataSource ma d
+/BitsPerComponent 1 d/Decode[0 1]d DE 4 DB/ImageType 3 d/DataDict id d
+/MaskDict md d/InterleaveType 3 d end image}{pop dup 1 eq{pop false 3 1 roll
+imagemask}{8 4 1 roll 8 eq{image}{QCI}ie}ie}ie grestore}d/BF{gsave BSt 1 eq{
+BCol SC WFi{fill}{eofill}ie}if BSt 2 ge BSt 8 le and{BDArr BSt 2 sub get/sc
+ED BCol{1. exch sub sc mul 1. exch sub}forall 3 array astore SC WFi{fill}{
+eofill}ie}if BSt 9 ge BSt 14 le and{WFi{clip}{eoclip}ie defM SM pathbbox 3 i
+3 i TR 4 2 roll 3 2 roll exch sub/h ED sub/w ED OMo{NP 0 0 MT 0 h RL w 0 RL
+0 h neg RL CP BkCol SC fill}if BCol SC 0.3 SW NP BSt 9 eq BSt 11 eq or{0 4 h
+{dup 0 exch MT w exch LT}for}if BSt 10 eq BSt 11 eq or{0 4 w{dup 0 MT h LT}
+for}if BSt 12 eq BSt 14 eq or{w h gt{0 6 w h add{dup 0 MT h sub h LT}for}{0
+6 w h add{dup 0 exch MT w sub w exch LT}for}ie}if BSt 13 eq BSt 14 eq or{w h
+gt{0 6 w h add{dup h MT h sub 0 LT}for}{0 6 w h add{dup w exch MT w sub 0
+exch LT}for}ie}if S}if BSt 24 eq{}if grestore}D/mat matrix d/ang1 D0/ang2 D0
+/w D0/h D0/x D0/y D0/ARC{/ang2 ED/ang1 ED/h ED/w ED/y ED/x ED mat CM pop x w
+2 div add y h 2 div add TR 1 h w div neg scale ang2 0 ge{0 0 w 2 div ang1
+ang1 ang2 add arc}{0 0 w 2 div ang1 ang1 ang2 add arcn}ie mat SM}D/C D0/P{NP
+MT 0.5 0.5 rmoveto 0 -1 RL -1 0 RL 0 1 RL CP PCol SC fill}D/M{/Cy ED/Cx ED}D
+/L{NP Cx Cy MT/Cy ED/Cx ED Cx Cy LT QS}D/DL{NP MT LT QS}D/HL{1 i DL}D/VL{2 i
+exch DL}D/R{/h ED/w ED/y ED/x ED NP x y MT 0 h RL w 0 RL 0 h neg RL CP BF QS
+}D/ACR{/h ED/w ED/y ED/x ED x y MT 0 h RL w 0 RL 0 h neg RL CP}D/xr D0/yr D0
+/rx D0/ry D0/rx2 D0/ry2 D0/RR{/yr ED/xr ED/h ED/w ED/y ED/x ED xr 0 le yr 0
+le or{x y w h R}{xr 100 ge yr 100 ge or{x y w h E}{/rx xr w mul 200 div d/ry
+yr h mul 200 div d/rx2 rx 2 mul d/ry2 ry 2 mul d NP x rx add y MT x y rx2
+ry2 180 -90 x y h add ry2 sub rx2 ry2 270 -90 x w add rx2 sub y h add ry2
+sub rx2 ry2 0 -90 x w add rx2 sub y rx2 ry2 90 -90 ARC ARC ARC ARC CP BF QS}
+ie}ie}D/E{/h ED/w ED/y ED/x ED mat CM pop x w 2 div add y h 2 div add TR 1 h
+w div scale NP 0 0 w 2 div 0 360 arc mat SM BF QS}D/A{16 div exch 16 div
+exch NP ARC QS}D/PIE{/ang2 ED/ang1 ED/h ED/w ED/y ED/x ED NP x w 2 div add y
+h 2 div add MT x y w h ang1 16 div ang2 16 div ARC CP BF QS}D/CH{16 div exch
+16 div exch NP ARC CP BF QS}D/BZ{curveto QS}D/CRGB{255 div 3 1 roll 255 div
+3 1 roll 255 div 3 1 roll}D/BC{CRGB BkCol sp}D/BR{CRGB BCol sp/BSt ED}D/WB{1
+W BR}D/NB{0 B BR}D/PE{setlinejoin setlinecap CRGB PCol sp/LWi ED/PSt ED LWi
+0 eq{0.25/LWi ED}if}D/P1{1 0 5 2 roll 0 0 PE}D/ST{defM SM concat}D/MF{true
+exch true exch{exch pop exch pop dup 0 get dup findfont dup/FontName get 3
+-1 roll eq{exit}if}forall exch dup 1 get/fxscale ED 2 get/fslant ED exch
+/fencoding ED[fxscale 0 fslant 1 0 0]makefont fencoding false eq{}{dup
+maxlength dict begin{1 i/FID ne{def}{pop pop}ifelse}forall/Encoding
+fencoding d currentdict end}ie definefont pop}D/MFEmb{findfont dup length
+dict begin{1 i/FID ne{d}{pop pop}ifelse}forall/Encoding ED currentdict end
+definefont pop}D/DF{findfont/fs 3 -1 roll d[fs 0 0 fs -1 mul 0 0]makefont d}
+D/ty 0 d/Y{/ty ED}D/Tl{gsave SW PCol SC NP 1 i exch MT 1 i 0 RL S grestore}D
+/T{PCol SC ty MT 1 i dup length 2 div exch stringwidth pop 3 -1 roll exch
+sub exch div exch 0 exch ashow}D/QI{/C save d pageinit/Cx 0 d/Cy 0 d/OMo
+false d}D/QP{C restore showpage}D/SPD{/setpagedevice where{1 DB 3 1 roll d
+end setpagedevice}{pop pop}ie}D/SV{BSt LWi PSt Cx Cy WFi OMo BCol PCol BkCol
+/nS nS 1 add d gsave}D/RS{nS 0 gt{grestore/BkCol ED/PCol ED/BCol ED/OMo ED
+/WFi ED/Cy ED/Cx ED/PSt ED/LWi ED/BSt ED/nS nS 1 sub d}if}D/CLSTART{/clipTmp
+matrix CM d defM SM NP}D/CLEND{clip NP clipTmp SM}D/CLO{grestore gsave defM
+SM}D
+/LArr[ [] [] [ 10.0 3.0 ] [ 3.0 10.0 ] [ 3.0 3.0 ] [ 3.0 3.0 ] [ 5.0 3.0 3.0 3.0 ] [ 3.0 5.0 3.0 3.0 ] [ 5.0 3.0 3.0 3.0 3.0 ] [ 3.0 5.0 3.0 3.0 3.0 3.0 ] ] d
+/pageinit {
+36 24 translate
+% 185*280mm (portrait)
+0 794 translate 1 -1 scale/defM matrix CM d } d
+% Fonts and encodings used
+/CourierList [
+[ /Courier 1.0 0.0 ]
+] d
+% No embeddable font for Courier found
+/Courier-ENC-00 [
+/.notdef/R/two/equal/one/zero/space/O/h/m/I/A/N/o/d/e/three/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef/.notdef
+/.notdef/.notdef/.notdef] def
+/Courier-Uni-00 Courier-ENC-00 CourierList MF
+%!PS-AdobeFont-1.0 Composite Font
+25 dict begin
+/FontName /Courier-Uni def
+/PaintType 0 def
+/FontMatrix[1 0 0 1 0 0]def
+/FontType 0 def
+/FMapType 2 def
+/Encoding [
+0]def
+/FDepVector [
+/Courier-Uni-00 findfont
+]def
+FontName currentdict end definefont pop
+/F1 14/Courier-Uni DF
+QI
+[1 0 0 1 0 0]ST
+1 2 0 0 128 0 0 PE
+NB
+W BC
+271 154 144 VL
+1 3 0 0 128 0 0 PE
+282 154 260 HL
+278 160 264 HL
+274 166 268 HL
+1 2 0 0 128 0 0 PE
+71 154 144 VL
+1 3 0 0 128 0 0 PE
+82 154 60 HL
+78 160 64 HL
+74 166 68 HL
+1 2 0 0 128 0 0 PE
+80 96 132 VL
+62 96 80 HL
+62 132 96 VL
+80 132 62 HL
+71 132 144 VL
+71 84 96 VL
+1 1 B 0 0 PE
+F1 F
+100 Y<00010002>14 0 T
+116 Y<00010003000400050006000700080009>56 0 T
+1 2 0 0 128 0 0 PE
+143 54 161 HL
+119 54 101 HL
+1 3 0 0 128 0 0 PE
+124 54 138 HL
+131 50 125 54 DL
+131 58 125 54 DL
+1 2 0 0 128 0 0 PE
+119 42 24 24 2880 5760 A
+1 1 B 0 0 PE
+84 Y<000A0004>14 105 T
+100 Y<000A000300040005000500060009000B>56 105 T
+1 2 0 0 128 0 0 PE
+239 45 203 HL
+239 63 45 VL
+203 63 239 HL
+203 45 63 VL
+203 54 191 HL
+251 54 239 HL
+1 1 B 0 0 PE
+81 Y<00010004>14 195 T
+97 Y<00010003000400050006000700080009>56 195 T
+1 2 0 0 128 0 0 PE
+271 126 144 VL
+271 102 84 VL
+1 3 0 0 128 0 0 PE
+271 107 121 VL
+267 114 271 108 DL
+275 114 271 108 DL
+1 2 0 0 128 0 0 PE
+259 102 24 24 1440 5760 A
+1 1 B 0 0 PE
+100 Y<000A0002>14 289 T
+116 Y<000A000300040005000500060009000B>56 289 T
+1 2 0 0 128 0 0 PE
+101 54 71 HL
+71 84 54 VL
+271 54 251 HL
+271 84 54 VL
+191 54 161 HL
+1 1 B 0 0 PE
+26 Y<000C000D000E000F0002>35 191 T
+128 0 128 P1
+170 50 9 9 3680 4080 A
+205 29 188 HL
+188 15 29 VL
+188 29 174 50 DL
+0 0 B 0 0 PE
+1 0 0 128 BR
+269 142 4 4 R
+0 0 B 0 0 PE
+1 0 0 128 BR
+69 142 4 4 R
+0 0 B 0 0 PE
+1 0 0 128 BR
+69 82 4 4 R
+0 0 B 0 0 PE
+1 0 0 128 BR
+189 52 4 4 R
+0 0 B 0 0 PE
+1 0 0 128 BR
+249 52 4 4 R
+0 0 B 0 0 PE
+1 0 0 128 BR
+99 52 4 4 R
+0 0 B 0 0 PE
+1 0 0 128 BR
+159 52 4 4 R
+0 0 B 0 0 PE
+1 0 0 128 BR
+269 82 4 4 R
+1 1 B 0 0 PE
+NB
+36 Y<000C000D000E000F0004>35 21 T
+128 0 128 P1
+42 39 59 HL
+59 25 39 VL
+59 39 71 54 DL
+1 1 B 0 0 PE
+<000C000D000E000F0010>35 301 T
+128 0 128 P1
+315 39 298 HL
+298 25 39 VL
+298 39 271 54 DL
+QP
+%%Trailer
+cleartomark
+countdictstack
+exch sub { end } repeat
+restore
+%%EOF
